--- a/src/BaGet.Aliyun/BaGet.Aliyun.csproj
+++ b/src/BaGet.Aliyun/BaGet.Aliyun.csproj
@@ -5,9 +5,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Aliyun.OSS.SDK.NetCore" Version="2.9.1" />
-  </ItemGroup>
+<!--  <ItemGroup>-->
+<!--    <PackageReference Include="Aliyun.OSS.SDK.NetCore" Version="2.9.1" />-->
+<!--  </ItemGroup>-->
 
   <ItemGroup>
     <ProjectReference Include="..\BaGet.Core\BaGet.Core.csproj" />
