--- a/src/BaGet.Aliyun/BaGet.Aliyun.csproj
+++ b/src/BaGet.Aliyun/BaGet.Aliyun.csproj
@@ -2,15 +2,22 @@
   <PropertyGroup>
     <PackageTags>NuGet;Alibaba;Cloud</PackageTags>
     <Description>The libraries to host BaGet on Alibaba Cloud (Aliyun).</Description>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
-<!--  <ItemGroup>-->
-<!--    <PackageReference Include="Aliyun.OSS.SDK.NetCore" Version="2.9.1" />-->
-<!--  </ItemGroup>-->
+  <!-- Uncomment to support BaGet.Aliyun features
+       app.AddAliyunOssStorage() in Startup.cs
+  <ItemGroup>
+    <PackageReference Include="Aliyun.OSS.SDK.NetCore" Version="2.9.1" />
+  </ItemGroup> -->
 
   <ItemGroup>
     <ProjectReference Include="..\BaGet.Core\BaGet.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Aliyun.OSS.SDK.NetCore" Version="2.14.1" />
   </ItemGroup>
 
 </Project>
