--- a/src/BaGet.Database.PostgreSql/BaGet.Database.PostgreSql.csproj
+++ b/src/BaGet.Database.PostgreSql/BaGet.Database.PostgreSql.csproj
@@ -1,14 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
 
     <PackageTags>NuGet</PackageTags>
     <Description>The libraries to host BaGet on PostgreSQL.</Description>
+    <TargetFramework>net8.0</TargetFramework>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.1.2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
   </ItemGroup>
 
   <ItemGroup>
