Enable HTTPS by default

--- a/src/BaGet/appsettings.json
+++ b/src/BaGet/appsettings.json
@@ -1,15 +1,18 @@
 {
+  // Set API key to disallow unrestricted access
   "ApiKey": "",
   "PackageDeletionBehavior": "Unlist",
   "AllowPackageOverwrites": false,
 
   "Database": {
     "Type": "Sqlite",
-    "ConnectionString": "Data Source=baget.db"
+    //TODO: Change to the full (absolute) path to baget.db
+    "ConnectionString": "Data Source=/path/to/baget.db"
   },
 
   "Storage": {
     "Type": "FileSystem",
+    // Change to the full path to packages directory
     "Path": ""
   },
 
@@ -18,22 +21,26 @@
   },
 
   "Mirror": {
-    "Enabled": false,
-
-    // Uncomment this to use the NuGet v2 protocol
-    //"Legacy": true,
-    "PackageSource": "https://api.nuget.org/v3/index.json"
+    // Enable mirroring by default
+    "PackageSource": "https://api.nuget.org/v3/index.json",
+    "Enabled": true
   },
 
-  // Uncomment this to configure BaGet to listen to port 8080.
-  // See: https://docs.microsoft.com/en-us/aspnet/core/fundamentals/servers/kestrel?view=aspnetcore-3.1#listenoptionsusehttps
-  //"Kestrel": {
-  //  "Endpoints": {
-  //    "Http": {
-  //      "Url": "http://localhost:8080"
-  //    }
-  //  }
-  //},
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:8400"
+      },
+      "Https": {
+        "Url": "https://localhost:8401"
+//TODO: Configure TLS certificate
+//        "Certificate": {
+//          "Path": "<path-to-your-certificate>",
+//          "KeyPath": "<path-to-your-key>"
+//        }
+      }
+    }
+  },
 
   "Logging": {
     "IncludeScopes": false,
