--- a/src/BaGet/Properties/launchSettings.json
+++ b/src/BaGet/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50557/",
+      "applicationUrl": "https://localhost:8401;http://localhost:8400",
       "sslPort": 0
     }
   },
@@ -23,7 +23,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
       },
-      "applicationUrl": "http://localhost:50561/"
+      "applicationUrl": "https://localhost:8401;http://localhost:8400"
     }
   }
 }
