--- a/src/BaGet.Aliyun/BaGet.Aliyun.csproj
+++ b/src/BaGet.Aliyun/BaGet.Aliyun.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aliyun.OSS.SDK.NetCore" Version="2.14.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
