--- a/src/BaGet.Database.SqlServer/BaGet.Database.SqlServer.csproj
+++ b/src/BaGet.Database.SqlServer/BaGet.Database.SqlServer.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
