--- a/src/BaGet.Gcp/BaGet.Gcp.csproj
+++ b/src/BaGet.Gcp/BaGet.Gcp.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Cloud.Storage.V1" Version="4.10.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
