--- a/src/BaGet.Web/BaGet.Web.csproj
+++ b/src/BaGet.Web/BaGet.Web.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Markdig" Version="0.37.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
