--- a/src/BaGet/appsettings.Development.json
+++ b/src/BaGet/appsettings.Development.json
@@ -1,10 +1,50 @@
 ﻿{
   "Logging": {
     "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+    "Debug": {
+      "LogLevel": {
+        "Default": "Debug",
+        "System": "Information",
+        "Microsoft": "Information"
+      }
+    },
+    "Console": {
+      "LogLevel": {
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Default": "Debug"
+      }
     }
+  },
+
+  // BaGet Config https://loic-sharma.github.io/BaGet/configuration/
+  "ApiKey": "",
+  "PackageDeletionBehavior": "Unlist",
+  "AllowPackageOverwrites": false,
+  "RunMigrationsAtStartup": false,
+
+  "Database": {
+    "Type": "Sqlite",
+    //TODO: Set full path to baget.db
+    "ConnectionString": "Data Source=baget.db"
+  },
+  //"Database": {
+  //  "Type": "PostgreSql",
+  //  "ConnectionString": "Server=pg.lan;Database=baget_db;Username=baget_user;Password=..."
+  //},
+
+  "Storage": {
+    "Type": "FileSystem",
+    //TODO: Set full path to packages directory
+    "Path": ""
+  },
+
+  "Search": {
+    "Type": "Database"
+  },
+
+  "Mirror": {
+    // Enable package mirroring
+    "PackageSource": "https://api.nuget.org/v3/index.json",
+    "Enabled": true
   }
 }
