--- a/src/BaGet/appsettings.json
+++ b/src/BaGet/appsettings.json
@@ -1,59 +1,5 @@
 {
-  // Set API key to disallow unrestricted access
-  "ApiKey": "",
-  "PackageDeletionBehavior": "Unlist",
-  "AllowPackageOverwrites": false,
-
-  "Database": {
-    "Type": "Sqlite",
-    //TODO: Change to the full (absolute) path to baget.db
-    "ConnectionString": "Data Source=/path/to/baget.db"
-  },
-
-  "Storage": {
-    "Type": "FileSystem",
-    // Change to the full path to packages directory
-    "Path": ""
-  },
-
-  "Search": {
-    "Type": "Database"
-  },
-
-  "Mirror": {
-    // Enable mirroring by default
-    "PackageSource": "https://api.nuget.org/v3/index.json",
-    "Enabled": true
-  },
-
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "http://localhost:8400"
-      },
-      "Https": {
-        "Url": "https://localhost:8401"
-//TODO: Configure TLS certificate
-//        "Certificate": {
-//          "Path": "<path-to-your-certificate>",
-//          "KeyPath": "<path-to-your-key>"
-//        }
-      }
-    }
-  },
-
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Microsoft.Hosting.Lifetime": "Information",
-        "Default": "Warning"
-      }
-    }
-  }
+  // Dummy appsettings.json required by HostBuilder
+  // Using appsettings.Development for local debugging
+  // Using appsettings.Production from mounted volume inside container
 }
